styles/globals.css
:root{
    --mb30 : 30px;
    --mb50 : 50px;
    --mb100 : 100px;
    --mb150 : 150px;

    --body : hsl(0, 0%, 5%);
    --background : hsl(0, 0%, 99%);

    --body-dark : hsl(0, 0%, 99%);
    --background-dark : hsl(0, 0%, 5%);

    --secondary-color : hsl(0, 0%, 80%);
}

@media(prefers-color-scheme: dark){
    :root{
        --background : var(--background-dark);
        --body : var(--body-dark);
    }
}
body{
    font-family: 'Poppins'!important;
    color : var(--body);
    background: var(--background)
}
a:visited, a:link{
    color: var(--body);
}

